<package>
  <name>behavior_tree</name>
  <version>0.0.0</version>
  <description>BehaviorTree</description>
  <maintainer email="michele.colledanchise@gmail.com">Michele Colledanchise</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>behavior_tree_core</run_depend>
  <run_depend>behavior_tree_leaves</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
